Fix remaining instance of -Waddress-of-packed-member

Bug: 619640
Change-Id: If642e2b68d1783e330ef2318300e86885a7a7fdf
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3845552
Commit-Queue: Hans Wennborg <hans@chromium.org>
Reviewed-by: Nico Weber <thakis@chromium.org>
Reviewed-by: Mark Mentovai <mark@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1041543}